      rulesets.
    * FIX: add missing context help to host details dialog
    * FIX: set new site dirty is host move due to change of
      folder attributes
    * FIX: fix exception on unknown value in DropdownChoice
    * FIX: add service specification to ruleset Delay service notifications
    * FIX: fixed problem with disabled sites in WATO

    BI:
    * New iterators FOREACH_CHILD and FOREACH_PARENT
    * FIX: fix handling of FOREACH_ in leaf nodes (remove hard coded
      $HOST$, replace with $1$, $2$, ..., apply argument substitution)
    * New logical datatable for aggregations that have the same name
      as a host. Converted view "BI Boxes" to this new table. This allows
      for Host-Aggregations containing data of other hosts as well.
    * count_ok: allow percentages, e.g. "count_ok!70%!50%"

1.2.0p1:
    Core:
    * Added macros $DATE$, $SHORTDATETIME$ and $LONGDATETIME$' to
      notification macros

    Checks & Agents:
    * FIX: diskstat: handle output 'No Devices Found' - avoiding exception
    * 3ware_units: Following states now lead to WARNING state instead of
      CRITICAL: "VERIFY-PAUSED", "VERIFYING", "REBUILDING"
    * New checks tsm_stagingpools, tsm_drive and tsm_storagepools
      Linux/UNIX
    * hpux_fchba: new check for monitoring FibreChannel HBAs und HP-UX

    Multisite:
    * FIX: fix severe exception in all views on older Python versions
      (like RedHat 5.5).

    WATO:
    * FIX: fix order of rule execution: subfolders now take precedence
      as they should.

1.2.0:
    Setup:
    * FIX: fix building of RPM packages (due to mk_mysql, mk_postgres)

    Core:
    * FIX: fix error message in case of duplicate custom check

    WATO:
    * FIX: add missing icon on cluster hosts to WATO in Multisite views
    * FIX: fix search field in host table if more than 10 hosts are shown
    * FIX: fix bulk edit and form properties (visibility of attributes was broken)
    * FIX: fix negating hosts in rule editor
